--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -40,7 +40,7 @@ parameters:
   namesFilter: ''                                           # [manifest, directories] the names of the items to build
   targetsFilter: 'ci'                                       # [manifest, directories] the targets of the items to build
   runCodeQL: 'false'
-  tsaOptionsPath: '.ci/tsaoptions.json'
+  tsaOptionsPath: '$(Build.SourcesDirectory)/.ci/tsaoptions.json'
 
 jobs:
   - job: ${{ parameters.name }}
@@ -56,6 +56,10 @@ jobs:
       vmImage: ${{ parameters.macosImage }}
     steps:
       - checkout: self
+      - ${{ if eq(variables['System.TeamProject'], 'devdiv') }}:
+        - task: CodeQL3000Init@0
+          displayName: CodeQL 3000 Init
+          condition: and(succeeded(), eq(variables['Codeql.Enabled'], 'true'), eq(variables['Build.SourceBranch'], 'refs/heads/update-codecheck-tasks'))
       # before the build starts, make sure the tooling is as expected
       - bash: sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh ${{ parameters.mono }}
         displayName: 'Switch to the latest Xamarin SDK'
@@ -330,6 +334,9 @@ jobs:
             scanType: 'Register'
             verbosity: 'Verbose'
             alertWarningLevel: 'High'
+      - task: CodeQL3000Finalize@0
+        displayName: CodeQL 3000 Finalize
+        condition: and(succeeded(), eq(variables['Codeql.Enabled'], 'true'), eq(variables['Build.SourceBranch'], 'refs/heads/update-codecheck-tasks'))
 
   - ${{ if and(eq(parameters.runChecks, 'true'), eq(variables['System.TeamProject'], 'devdiv')) }}:
     - job: ${{ parameters.name }}_checks
