--- a/source/Firebase/Database/Database.targets
+++ b/source/Firebase/Database/Database.targets
@@ -13,7 +13,7 @@
     <ItemGroup>
       <_NativeReference Update="@(_NativeReference)" Condition="'%(_NativeReference._Id)' == '$(_FirebaseDatabaseId)'">
         <Kind>Framework</Kind>
-        <LinkerFlags>-ObjC -lc++ -licucore</LinkerFlags>
+        <LinkerFlags>-ObjC -lc++</LinkerFlags>
         <Frameworks>CFNetwork Security SystemConfiguration</Frameworks>
         <SmartLink>True</SmartLink>
         <ForceLoad>True</ForceLoad>
